--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Application Pyramide4 SWF</title>
     
-    <script src="ruffle.js"></script>
+    <script src="ruffle/ruffle.js"></script>
 
     <style>
         /* CSS optionnel pour centrer l'animation sur la page */
@@ -31,3 +31,4 @@
 </body>
 
 </html>
+
