--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Application Pyramide4 SWF</title>
+    <title>Exercice Equilibre Alimentaire</title>
     
     <script src="ruffle/ruffle.js"></script>
 
@@ -31,5 +31,6 @@
 </body>
 
 </html>
+
 
 
